--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 
         </div>
     </footer>
-    <script src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
